@@ -66,6 +66,7 @@ dpkg (1.16.4) UNRELEASED; urgency=low
     Closes: #675613, #676061, #676062, #676107, #676118, #676122
   * Do not reset Multi-Arch field in the update log when removing the package.
     Closes: #676496
+  * Fix dpkg-split to honour the DPKG_ADMINDIR environment variable.
 
   [ Updated man page translations ]
   * German (Helge Kreutzmann).
